--- a/client/src/components/components.css
+++ b/client/src/components/components.css
@@ -74,6 +74,29 @@
     margin-right: 1.5em;
 }
 
+.ui.stationfinder {
+    width: 100%;
+    background-color: olive;
+    padding: 1em;
+}
+
+.ui.selectedstation {
+    width: 100%;
+    margin-top: 4rem;
+    background-color: grey;
+    padding: 1em;
+}
+
+.ui.menu:not(.vertical) .item.right.nav-button {
+    margin-left: 0!important;
+}
+
 #nav-button {
     margin-left: 0!important;
+}
+
+.ui.form .field.inline {
+    width: 200px;
+    display: inline-block;
+    margin-right: 50px;
 }
